force-app/main/default/objects/Previous_Loan__c/Previous_Loan__c.object-meta.xml
<CustomObject>
    <description>Stores information about a client&#39;s previous litigation loans</description>
    <label>Previous Loan</label>
    <nameField>
        <label>Previous Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Previous Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>