force-app/main/default/objects/Previous_Loan__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Lender&#39;s Account</description>
    <label>Lender</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Account_Type__c</field>
            <operation>equals</operation>
            <value>Litigation Lender</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Previous Loans</relationshipLabel>
    <relationshipName>Previous_Loans_to_Clients</relationshipName>
    <type>Lookup</type>
</CustomField>