force-app/main/default/objects/Previous_Loan__c/fields/Payout_Statement_on_File__c.field-meta.xml
<CustomField>
    <fullName>Payout_Statement_on_File__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payout Statement on File</label>
    <type>Checkbox</type>
</CustomField>