force-app/main/default/objects/Previous_Loan__c/fields/Scheduled_Payment__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Payment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Opportunity__c</field>
            <operation>equals</operation>
            <valueField>Scheduled_Payment__c.Opportunity__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Scheduled_Payment__c</referenceTo>
    <relationshipLabel>Previous Loans</relationshipLabel>
    <relationshipName>Previous_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>