force-app/main/default/objects/Previous_Loan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Keeps track of status automatically. &#39;Collecting Information&#39; &gt; &#39;Ready to Schedule&#39;, &#39;Payout Date Expired&#39; &gt; {Scheduled Payment&#39;s Status}</description>
    <formula>IF(
    NOT(ISBLANK(TEXT(Scheduled_Payment__r.Status__c))),
    TEXT(Scheduled_Payment__r.Status__c),
    IF(
        AND(
            NOT(ISBLANK(Lender__c)),
            Amount__c &gt; 0,
            Payout_Statement_on_File__c = TRUE,
            NOT(ISBLANK(Date_Payout_Valid_Until__c))
        ),
        IF(
            Date_Payout_Valid_Until__c &lt; TODAY(),
            &#39;Payout Date Expired&#39;,
            &#39;Ready to Schedule&#39;
        ),
        &#39;Collecting Information&#39;
    )
)</formula>
    <label>Status</label>
    <type>Text</type>
</CustomField>